src/app/explore/explore.component.scss
@use '../shared/styles/colors';

.container-search {
  display: flex;
}
mat-form-field {
  position: sticky;
  top: 0;
  z-index: 1;
  width: 100%;
  background-color: white;

  .container-search-icon {
    display: flex;
    justify-content: center;
  }
}
button.mat-raised-button {
  background-color: #{colors.$primary-4};
  color: white;
}
mat-card {
  width: 30%;
}
.user-cards {
  display: flex;
  flex-wrap: wrap;
  gap: 20px 4.8%;

  mat-card {
    display: flex;
    flex-direction: column;
    align-items: center;

    span.username {
      font-weight: lighter;
    }
  }
}

